--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.knarcraft</groupId>
     <artifactId>Stargate</artifactId>
-    <version>0.11.5.1-SNAPSHOT</version>
+    <version>0.11.5.2</version>
 
     <licenses>
         <license>
