--- a/.github/ISSUE_TEMPLATE/Feature-Request.yml
+++ b/.github/ISSUE_TEMPLATE/Feature-Request.yml
@@ -1,8 +1,5 @@
-name: 'Feature Request'
-about: 'Have a use case not presently accounted for in SG? Please describe it here!'
-title: ''
-labels: ''
-assignees: ''
+name: Feature Request
+about: Have a use case not presently accounted for in SG? Please describe it here!
 body:
     - type: markdown
       attributes:
@@ -18,6 +15,7 @@ body:
               - Functionality that requires breaking interface immersion, for example, requiring a user to interact with a portal through commands and/or chat.
             - [Suggesting a modular interlinkage](https://github.com/stargate-rewritten/Stargate-Customizations/issues/new)
               - Functionality that requires breaking gameplay continuity by requiring interaction with an external resource (for example, a website).
+              
     - type: textarea
       id: use-cases
       attributes:
@@ -27,6 +25,7 @@ body:
         value: "No use case specified"
       validations:
         required: true
+        
     - type: textarea
       id: suggestion-content
       attributes:
@@ -36,6 +35,7 @@ body:
         value: "No suggestion included"
       validations:
         required: true
+        
     - type: textarea
       id: additional-content
       attributes:
