--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -2,6 +2,7 @@ name: Feature Request
 description: Have a use case not presently accounted for in SG? Please describe it here!
 body:
     - type: markdown
+      id: philosophy
       attributes:
         value: |
             **Philosophy**
@@ -21,8 +22,8 @@ body:
       attributes:
         label: Use Case
         description: In SG, is there any behaviour someone may wish for that is not accommodated as-is?
-        placeholder: What problem are you trying to solve and who does this problem most frequently impact?
-        value: "No use case specified"
+        placeholder: "No use case specified!"
+        value: What problem are you trying to solve and who does this problem most frequently impact?
       validations:
         required: true
         
@@ -31,8 +32,8 @@ body:
       attributes:
         label: Proposed Solution
         description: What do you think the best way to accomodate your use case is?
-        placeholder: "Describe your proposal, including examples and visuals if possible."
-        value: "No suggestion included"
+        placeholder: "No suggestions provided!"
+        value: "Describe your proposal, including examples and visuals if possible."
       validations:
         required: true
         
@@ -41,7 +42,7 @@ body:
       attributes:
         label: Additional Context
         description: Add any other context or screenshots about the feature request may be placed here.
-        placeholder: "Optional; can include anything including precedents or other considerations."
-        value: ""
+        placeholder: ""
+        value: "Optional; can include anything including precedents or other considerations."
       validations:
         required: false
