Apparently title must not be null.

--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -1,8 +1,8 @@
-name: "Feature Request"
+name: "Request a Feature"
 description: "Have a use case not presently accounted for in SG? Please describe it here!"
-title: ""
-labels: ""
-assignees: ""
+title: "<Issue Title (Please describe)>"
+labels: []
+assignees: []
 body:
     - type: markdown
       attributes:
