--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Create credentials file
         uses: "finnp/create-file-action@master"
         env:
-          FILE_NAME: "\src\test\resources\mysql_credentials.secret"
+          FILE_NAME: "Stargate-Bukkit\src\test\resources\mysql_credentials.secret"
           FILE_DATA: |-
             MYSQL_DB_PASSWORD=root
             MYSQL_DB_USER=root
