--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -32,11 +32,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=stargate-rewritten_Stargate-Bukkit -DskipTests
       - name: Create credentials file
         uses: "finnp/create-file-action@master"
         env:
@@ -47,6 +42,11 @@ jobs:
             MYSQL_DB_PORT=3306
             MYSQL_DB_NAME=stargate
             MYSQL_DB_ADDRESS=localhost
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=stargate-rewritten_Stargate-Bukkit
     services:
       mysql:
         image: mysql:5.7.22
